# codexos

./: .editorconfig  .gitattributes  .gitignore  .lychee.toml  .pre-commit-config.yaml  AGENT_EXECUTION_HISTORY_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CodexOS++ Technical Blueprint.md  CodexOS_Blueprint.md  IMPROVEMENTS-SUMMARY.md  LICENSE.md  Makefile  NOTICE  README.md  REQUIREMENTS.md  SECURITY.md  STARTUP-NEW-LAPTOP.md  STARTUP.md  STRIPE_SETUP.md  add_license_headers.py  ai-scaffold-demo.md  blueprint.md  build-dev.sh  copy-prompt.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.local  env.production.example  interactive-prd-creation-prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  project-plan-template.md  project-plan.md  quick-test.sh  review1.md  (+9 more)
apps/backend/: AGENT_EXECUTION_HISTORY.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  simple-start.py  start-dev.sh  test_history_endpoints.py  test_trigger_agent.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py  002_agent_execution_history.py  003_add_mfa_fields.py  004_rbac_enhancements.py
apps/backend/app/: __init__.py  cli.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/core/: agent_engine.py  auth.py  cache.py  config.py  encryption.py  health.py  monitoring.py  openapi.py  operability.py  security.py
apps/backend/app/db/: base.py  init_db.py  session.py
apps/backend/app/models/: __init__.py  agent.py  audit.py  marketplace.py  oauth.py  rag.py  rbac.py  secure_vault.py  tenant.py  user.py  vault.py
apps/backend/app/schemas/: agent.py  cost_guard.py  execution.py  manifest.py  rag.py  user.py
apps/backend/app/services/: agent_executor.py  agent_manifest.py  cost_guard.py  execution_history_service.py  execution_timeline.py  llm_service.py  (+8 more)
apps/backend/tests/: conftest.py  test_cli.py
(+209 files in other folders)
